--- a/data/main-window.in.ui
+++ b/data/main-window.in.ui
@@ -165,25 +165,25 @@
                           <object class="GtkMenu" id="menu1">
                             <property name="visible">True</property>
                             <child>
-                              <object class="GtkImageMenuItem" id="tweets_new_tweet">
+                              <object class="GtkImageMenuItem" id="new_update">
                                 <property name="label">New _Tweet</property>
                                 <property name="visible">True</property>
                                 <property name="use_underline">True</property>
-                                <property name="image">compose_menu_new_tweet_image</property>
+                                <property name="image">compose_menu_new_update_image</property>
                                 <property name="use_stock">False</property>
                                 <accelerator key="n" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                               </object>
                             </child>
                             <child>
-                              <object class="GtkImageMenuItem" id="tweets_new_dm">
+                              <object class="GtkImageMenuItem" id="new_dm">
                                 <property name="label">New _DM</property>
                                 <property name="visible">True</property>
                                 <property name="tooltip_text" translatable="yes">Send a new Direct Message to one of your friends [Ctrl+D]</property>
                                 <property name="use_underline">True</property>
                                 <property name="image">compose_menu_new_dm_image</property>
                                 <property name="use_stock">False</property>
-                                <accelerator key="d" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                                 <accelerator key="Return" signal="activate" modifiers="GDK_SHIFT_MASK"/>
+                                <accelerator key="d" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                               </object>
                             </child>
                           </object>
@@ -722,18 +722,19 @@
           </packing>
         </child>
         <child>
-          <object class="GtkVPaned" id="tweet_vpaned">
+          <object class="GtkVPaned" id="main_vpaned">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="orientation">vertical</property>
             <property name="position">2</property>
             <property name="position_set">True</property>
             <child>
-              <object class="GtkHPaned" id="tweet_list_hpaned">
+              <object class="GtkHPaned" id="update_viewer_hpaned">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <child>
                   <object class="GtkVBox" id="best_friends_vbox">
+                    <property name="width_request">250</property>
                     <property name="visible">True</property>
                     <property name="border_width">6</property>
                     <property name="orientation">vertical</property>
@@ -1068,16 +1069,16 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkHBox" id="tweet_lists_hbox">
+                  <object class="GtkHBox" id="tabs_hbox">
                     <property name="visible">True</property>
                     <child>
-                      <object class="GtkNotebook" id="tweet_lists_notebook">
+                      <object class="GtkNotebook" id="tabs_notebook">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="scrollable">True</property>
                         <property name="enable_popup">True</property>
                         <child>
-                          <object class="GtkAspectFrame" id="tweet_lists_aspect_frame">
+                          <object class="GtkAspectFrame" id="tabs_aspect_frame">
                             <property name="visible">True</property>
                             <property name="label_xalign">0</property>
                             <property name="shadow_type">none</property>
@@ -1087,7 +1088,7 @@
                           </object>
                         </child>
                         <child type="tab">
-                          <object class="GtkLabel" id="tweet_lists_null_page_label">
+                          <object class="GtkLabel" id="tabs_null_page_label">
                             <property name="visible">True</property>
                             <property name="label" translatable="yes">page 1</property>
                           </object>
@@ -1212,7 +1213,7 @@
     <property name="visible">True</property>
     <property name="stock">gtk-leave-fullscreen</property>
   </object>
-  <object class="GtkImage" id="compose_menu_new_tweet_image">
+  <object class="GtkImage" id="compose_menu_new_update_image">
     <property name="visible">True</property>
     <property name="stock">gtk-edit</property>
   </object>
