--- a/data/preferences.ui
+++ b/data/preferences.ui
@@ -29,6 +29,7 @@
                     <property name="visible">True</property>
                     <property name="border_width">12</property>
                     <property name="label_xalign">0</property>
+                    <property name="shadow_type">in</property>
                     <child>
                       <object class="GtkAlignment" id="general_look_and_feel_alignment">
                         <property name="visible">True</property>
@@ -47,7 +48,7 @@
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
                                 <property name="use_underline">True</property>
-                                <property name="draw_indicator">False</property>
+                                <property name="draw_indicator">True</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -78,8 +79,9 @@
                 <child>
                   <object class="GtkFrame" id="frame1">
                     <property name="visible">True</property>
+                    <property name="border_width">12</property>
                     <property name="label_xalign">0</property>
-                    <property name="shadow_type">none</property>
+                    <property name="shadow_type">in</property>
                     <child>
                       <object class="GtkAlignment" id="alignment1">
                         <property name="visible">True</property>
@@ -90,12 +92,13 @@
                             <property name="orientation">vertical</property>
                             <child>
                               <object class="GtkCheckButton" id="control_panel_compact_view_toggle_button">
-				      <property name="label" translatable="yes">Only show the _enabled areas on the control panel.</property>
+                                <property name="label" translatable="yes">Only show buttons when they're clickable.
+I.E. Enable's _Compact View</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
                                 <property name="use_underline">True</property>
-                                <property name="draw_indicator">False</property>
+                                <property name="draw_indicator">True</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -105,12 +108,13 @@
                             </child>
                             <child>
                               <object class="GtkCheckButton" id="control_panel_use_dialog_toggle_button">
-                                <property name="label" translatable="yes">Use a separate _window to view &amp; compose updates/tweets.</property>
+                                <property name="label" translatable="yes">Use a separate window to view &amp; compose updates/tweets.
+Enable: _Floating Update Viewer</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
                                 <property name="use_underline">True</property>
-                                <property name="draw_indicator">False</property>
+                                <property name="draw_indicator">True</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -159,7 +163,7 @@
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
                                 <property name="use_underline">True</property>
-                                <property name="draw_indicator">False</property>
+                                <property name="draw_indicator">True</property>
                               </object>
                               <packing>
                                 <property name="position">0</property>
@@ -172,7 +176,7 @@
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
                                 <property name="use_underline">True</property>
-                                <property name="draw_indicator">False</property>
+                                <property name="draw_indicator">True</property>
                               </object>
                               <packing>
                                 <property name="position">1</property>
@@ -180,12 +184,12 @@
                             </child>
                             <child>
                               <object class="GtkCheckButton" id="expand_urls_selected_only_checkbutton">
-                                <property name="label" translatable="yes">_Only show link titles when a Tweet's selected.</property>
+                                <property name="label" translatable="yes">_Only show link titles once an update's selected.</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
                                 <property name="use_underline">True</property>
-                                <property name="draw_indicator">False</property>
+                                <property name="draw_indicator">True</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -200,7 +204,7 @@
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
                                 <property name="use_underline">True</property>
-                                <property name="draw_indicator">False</property>
+                                <property name="draw_indicator">True</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -236,7 +240,7 @@
             <child type="tab">
               <object class="GtkLabel" id="look_and_feel_label">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">Look &amp;amp; _Feel</property>
+                <property name="label" translatable="yes">_Look &amp;amp; Feel</property>
                 <property name="use_markup">True</property>
                 <property name="use_underline">True</property>
               </object>
@@ -354,7 +358,7 @@
                             <property name="orientation">vertical</property>
                             <child>
                               <object class="GtkCheckButton" id="autoload_best_friends_updates_check_button">
-                                <property name="label" translatable="yes">My Best _Friends' new update(s).</property>
+                                <property name="label" translatable="yes">My _Best Friends' new update(s).</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
@@ -386,7 +390,8 @@
                             </child>
                             <child>
                               <object class="GtkCheckButton" id="autoload_replies_check_button">
-                                <property name="label" translatable="yes">My @_replies/@mentions.</property>
+                                <property name="label" translatable="yes">_Updates sent to me or one's I'm mentioned in.
+@replies/@mentions.</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
@@ -432,6 +437,8 @@
                     </child>
                   </object>
                   <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
@@ -444,7 +451,7 @@
             <child type="tab">
               <object class="GtkLabel" id="startup_label">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">S_tart-up</property>
+                <property name="label" translatable="yes">_Tabs</property>
                 <property name="use_underline">True</property>
               </object>
               <packing>
@@ -475,7 +482,7 @@
                             <property name="orientation">vertical</property>
                             <child>
                               <object class="GtkCheckButton" id="notify_best_friends_updates_check_button">
-                                <property name="label" translatable="yes">My Best _Friends' updates what/how they're doing.</property>
+                                <property name="label" translatable="yes">When one of my _Best Friends' posts an update.</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
@@ -490,7 +497,7 @@
                             </child>
                             <child>
                               <object class="GtkCheckButton" id="notify_dms_check_button">
-                                <property name="label" translatable="yes">I get new _Direct Messages(DMs).</property>
+                                <property name="label" translatable="yes">When I get new Direct Messages(_DMs).</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
@@ -524,7 +531,7 @@
                             </child>
                             <child>
                               <object class="GtkCheckButton" id="notify_following_updates_check_button">
-                                <property name="label" translatable="yes">Any one I'm _following update what/how they're doing.</property>
+                                <property name="label" translatable="yes">When any one I _follow posts an update(eg. dents or tweets).</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
@@ -550,8 +557,8 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkCheckButton" id="notify_beep_updates_check_button">
-                                <property name="label" translatable="yes">_Beep when notifying me.</property>
+                              <object class="GtkCheckButton" id="notify_all_new_updates_check_button">
+                                <property name="label" translatable="yes">_All new updates in all open tabs (i.e. timelines).</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
@@ -566,8 +573,8 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkCheckButton" id="notify_all_new_updates_check_button">
-                                <property name="label" translatable="yes">_All new updates in all open tabs (i.e. timelines).</property>
+                              <object class="GtkCheckButton" id="notify_beep_updates_check_button">
+                                <property name="label" translatable="yes">_Beep when notifying me.</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
@@ -588,7 +595,7 @@
                     <child type="label">
                       <object class="GtkLabel" id="notify_frame_label">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">&lt;b&gt;Display a pop-up notification when:&lt;/b&gt;</property>
+                        <property name="label" translatable="yes">&lt;b&gt;Display pop-up notifications when:&lt;/b&gt;</property>
                         <property name="use_markup">True</property>
                         <property name="use_underline">True</property>
                       </object>
@@ -652,7 +659,6 @@
                             </child>
                             <child>
                               <object class="GtkFrame" id="frame2">
-                                <property name="visible">False</property>
                                 <property name="label_xalign">0</property>
                                 <property name="shadow_type">none</property>
                                 <child>
@@ -671,7 +677,7 @@
                                     <property name="visible">True</property>
                                     <property name="xpad">6</property>
                                     <property name="ypad">6</property>
-                                    <property name="label" translatable="yes">&lt;b&gt;Replace "/me", (without the quotes) in my updates with:&lt;/b&gt;</property>
+                                    <property name="label" translatable="yes">&lt;b&gt;Replace "/_me", (without the quotes) in my updates with:&lt;/b&gt;</property>
                                     <property name="use_markup">True</property>
                                     <property name="use_underline">True</property>
                                     <property name="mnemonic_widget">replace_me_with_combo_box</property>
@@ -773,7 +779,7 @@
             <child type="tab">
               <object class="GtkLabel" id="udates_label">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">_Updates</property>
+                <property name="label" translatable="yes">_Sending Updates</property>
                 <property name="use_underline">True</property>
               </object>
               <packing>
